--- a/exercice7.html
+++ b/exercice7.html
@@ -6,13 +6,23 @@
   <meta charset="UTF-8">
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
-<body>
-    <div id="container">
-        <div class="carré1"></div>
-        <div class="carré2"></div>
-        <div class="carré3"></div>
-    </div>
 
+<body>
+  <div id="container">
+    <div class="box1"></div>
+    <div class="box2"></div>
+  </div>
+  <div id="container2">
+    <div class="box3"></div>
+    <div id="container3">
+      <div class="box4"></div>
+      <div class="box5"></div>
+      <div class="box6"></div>
+      <div class="box7"></div>
+      <div class="box8"></div>
+
+    </div>
+  </div>
 
 </body>
 
